add rest assured and karate